--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -18,19 +18,6 @@ body{
         overflow-y: hidden;
     }
 }
-.block{
-    display: none;
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(45, 61, 81, .5);
-    z-index: 101;
-    &.active{
-        display: block;
-    }
-}
 a{
 	display: inline-block;
 	text-decoration: none;
@@ -77,6 +64,7 @@ svg{
     line-height: 50px;
 }
 .button{
+    max-width: max-content;
     background-color: #2D3D51;
     font-weight: 600;
     color: #fefefe;
@@ -115,15 +103,53 @@ svg{
     }
 }
 
+.fake-checkbox{
+    display: block;
+    cursor: pointer;
+    & > input{
+        display: none;
+        &:checked{
+            & + .colors__circle{
+                border-color: $black;
+            }
+            & + .storage__item{
+                border-color: #0195FF;
+                color: #0195FF;
+            }
+        }
+    }
+}
+
 .modal{
-    display: none;
+    visibility: hidden;
+    transition: all .3s;
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
     height: 100vh;
+    z-index: 102;
     &.active{
-        display: block;
+        visibility: visible;
+    }
+    &.from-left{
+        .modal{
+            &__inner{
+                padding-left: 0;
+            }
+            &__content{
+                margin-left: 0;
+                transform: translateX(-100%);
+            }
+        }
+        &.active{
+            .modal{
+                &__content{
+                    transform: translateX(0);
+                    transition: all .3s;
+                }
+            }
+        }
     }
     &__inner{
         overflow-y: auto; 
@@ -135,17 +161,16 @@ svg{
         padding: 0 36px;
         display: flex;
         align-items: center;
-        z-index: 105;
+        &.active{
+            background-color: rgba(45, 61, 81, .5);
+            transition: all .3s;
+        }
     }
     &__content{
         margin: auto;
         max-width: max-content;
         width: 100%;
         background: #FFF;
-    }
-    .cart-title{
-        font-weight: 700;
-        line-height: 25px;
-        color: $black;
+        z-index: 105;
     }
 }
